# tinyinstallj

./: .gitignore  Cargo.toml  LICENSE  README.md  build.rs  create_installer.py  test.sh  tinyinstallj.json  uninstall.sh
src/: main.rs
src/tinyinstallj/: check_is_admin.rs  check_java_installation.rs  config.rs  config.rs.in  download.rs  download_jar.rs  get_install_paths.rs  get_jar.rs  install.rs  install_jar.rs  mod.rs  utils.rs
