[package]
name = "tinyinstallj"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bytes = "1.1.0"
reqwest = { version = "0.11.9", features = ["blocking"] }
nix = "0.23.1"
dirs = "4.0.0"
webbrowser = "0.5.5"

[target.'cfg(target_family = "windows")'.dependencies]
winreg = "0.7"
# lnk = "0.3.0"
platform-dirs = "0.3.0"

[target.'cfg(target_family = "unix")'.dependencies]
isatty = "0.1.9"

[build-dependencies]
# winres = "0.1.12"

[profile.release]
# strip = true  # Automatically strip symbols from the binary.
opt-level = "z"  # Optimize for size.
lto = true  # Enable link time optimization
# These two reduce executable size by about 1.5BMB but it's not really worth it for the slower build time
# codegen-units = 1  # Reduce parallel code generation units
# panic = "abort"